feat: add page (add todo page) with restyling backgroung

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,16 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Medium.ttf
+    - family: JetBrains
+      fonts:
+        - asset: assets/fonts/JetBrainsMonoNL-Medium.ttf
+    - family: BreeSerif
+      fonts:
+        - asset: assets/fonts/BreeSerif-Regular.ttf    
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
