--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_secure_storage: ^9.0.0
   otp_text_field_v2: ^1.0.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
