--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   otp_text_field_v2: ^1.0.3
   intl: ^0.18.1
+  cloud_firestore: ^4.15.5
 
 dev_dependencies:
   flutter_test:
